--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -407,6 +407,7 @@ jobs:
             done
 
   release:
+    runs-on: ubuntu-20.04
     if: ${{ github.ref_type == 'tag'}}
     needs:
       - linux-arm64
@@ -449,4 +450,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: ${{ github.event.repository.name }}-*-${{ steps.slug.outputs.version }}
-        discussion_category_name: General
+          discussion_category_name: General
