--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-linux-arm64-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-linux-arm64-${{ steps.slug.outputs.version }}
           path: |
             bin/*
 
@@ -102,7 +102,7 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-linux-armhf-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-linux-armhf-${{ steps.slug.outputs.version }}
           path: |
             bin/*
 
@@ -146,7 +146,7 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-linux-i686-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-linux-i686-${{ steps.slug.outputs.version }}
           path: |
             bin/*
 
@@ -179,12 +179,12 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-linux-x86_64-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-linux-x86_64-${{ steps.slug.outputs.version }}
           path: |
             bin/*
 
-  macos-universal:
-    runs-on: macos-10.15
+  mac-universal:
+    runs-on: mac-10.15
     steps:
       - uses: actions/checkout@v2
         with:
@@ -193,7 +193,7 @@ jobs:
         run: |
           sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/*
           sudo xcode-select -s "/Applications/Xcode_12.3.app"
-      - name: Build macOS universal
+      - name: Build mac universal
         env:
           CFLAGS: -arch x86_64 -arch arm64 -DMAC_OS_X_VERSION_MAX_ALLOWED=MAC_OS_X_VERSION_10_12 -mmacosx-version-min=10.12 -mtune=generic -msse -msse2
           CXXFLAGS: -arch x86_64 -arch arm64 -DMAC_OS_X_VERSION_MAX_ALLOWED=MAC_OS_X_VERSION_10_12 -mmacosx-version-min=10.12 -mtune=generic -msse -msse2
@@ -215,15 +215,8 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-macOS-universal-${{ steps.slug.outputs.version }}
-          path: |
-            *-macOS.pkg
-            bin/*
-            !bin/*-ladspa.dylib
-            !bin/*-dssi.dylib
-            !bin/lv2
-            !bin/vst2
-            !bin/vst3
+          name: dragonfly-reverb-mac-universal-${{ steps.slug.outputs.version }}
+          path: *-macOS.pkg
 
   win32:
     runs-on: ubuntu-20.04
@@ -264,7 +257,7 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-win32-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-win32-${{ steps.slug.outputs.version }}
           path: |
             bin/*
             !bin/*-ladspa.dll
@@ -303,7 +296,7 @@ jobs:
           fi
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.event.repository.name }}-win64-${{ steps.slug.outputs.version }}
+          name: dragonfly-reverb-win64-${{ steps.slug.outputs.version }}
           path: |
             bin/*
             !bin/*-ladspa.dll
@@ -414,20 +407,27 @@ jobs:
       - linux-armhf
       - linux-i686
       - linux-x86_64
-      - macos-universal
+      - mac-universal
       - win32
       - win64
       - plugin-validation
     steps:
-      - name: Set slug
-        id: slug
-        run: echo "::set-output name=version::${{ github.ref_name }}"
-      - uses: actions/download-artifact@v3
+      - name: Collect artifacts
+        uses: actions/download-artifact@v3
+      - name: Create archive files
+        run: |
+          zip -r dragonfly-reverb-arm64-${{ github.ref_name }}.zip dragonfly-reverb-arm64-${{ github.ref_name }}
+          zip -r dragonfly-reverb-armhf-${{ github.ref_name }}.zip dragonfly-reverb-armhf-${{ github.ref_name }}
+          zip -r dragonfly-reverb-i686-${{ github.ref_name }}.zip dragonfly-reverb-i686-${{ github.ref_name }}
+          zip -r dragonfly-reverb-x86_64-${{ github.ref_name }}.zip dragonfly-reverb-x86_64-${{ github.ref_name }}
+          zip -r dragonfly-reverb-mac-universal-${{ github.ref_name }}.zip dragonfly-reverb-mac-universal-${{ github.ref_name }}
+          zip -r dragonfly-reverb-win32-${{ github.ref_name }}.zip dragonfly-reverb-win32-${{ github.ref_name }}
+          zip -r dragonfly-reverb-win64-${{ github.ref_name }}.zip dragonfly-reverb-win64-${{ github.ref_name }}
       - name: Display file information
         shell: bash
         run: ls -lR
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ github.event.repository.name }}-*-${{ steps.slug.outputs.version }}
+          files: *.zip
           discussion_category_name: General
