Fix build.yml again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -430,5 +430,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: *.zip
+          files: |
+            *.zip
           discussion_category_name: General
