--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,9 +182,8 @@ jobs:
           name: dragonfly-reverb-linux-x86_64-${{ steps.slug.outputs.version }}
           path: |
             bin/*
-
-  mac-universal:
-    runs-on: mac-10.15
+  macos-universal:
+    runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v2
         with:
@@ -408,7 +407,7 @@ jobs:
       - linux-armhf
       - linux-i686
       - linux-x86_64
-      - mac-universal
+      - macos-universal
       - win32
       - win64
       - plugin-validation
