Refactor selection widget and change ER plugin to use it

--- a/plugins/dragonfly-early-reflections/Makefile
+++ b/plugins/dragonfly-early-reflections/Makefile
@@ -45,7 +45,7 @@ FILES_UI  = $(FILES_COMMON) \
 	UI.cpp \
 	AbstractUI.cpp \
 	../../common/LabelledKnob.cpp \
-	../../common/Spectrogram.cpp \
+	../../common/Selection.cpp \
 	../../common/Bitstream_Vera_Sans_Regular.cpp
 
 # --------------------------------------------------------------
