Tweak build to disable unwanted features
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins/dragonfly-early-reflections/Makefile
+++ b/plugins/dragonfly-early-reflections/Makefile
@@ -51,6 +51,8 @@ FILES_UI  = $(FILES_COMMON) \
 # --------------------------------------------------------------
 # Do some magic
 
+FILE_BROWSER_DISABLED = true
+SKIP_RTAUDIO_FALLBACK = true
 include ../../dpf/Makefile.plugins.mk
 
 # --------------------------------------------------------------
