Enable linux-riscv64 in releases too
Signed-off-by: falkTX <falktx@falktx.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -495,6 +495,7 @@ jobs:
       - linux-arm64
       - linux-armhf
       - linux-i686
+      - linux-riscv64
       - linux-x86_64
       - macos-universal
       - win32
@@ -508,6 +509,7 @@ jobs:
           zip -r dragonfly-reverb-linux-arm64-${{ github.ref_name }}.zip dragonfly-reverb-linux-arm64-${{ github.ref_name }}
           zip -r dragonfly-reverb-linux-armhf-${{ github.ref_name }}.zip dragonfly-reverb-linux-armhf-${{ github.ref_name }}
           zip -r dragonfly-reverb-linux-i686-${{ github.ref_name }}.zip dragonfly-reverb-linux-i686-${{ github.ref_name }}
+          zip -r dragonfly-reverb-linux-riscv64-${{ github.ref_name }}.zip dragonfly-reverb-linux-riscv64-${{ github.ref_name }}
           zip -r dragonfly-reverb-linux-x86_64-${{ github.ref_name }}.zip dragonfly-reverb-linux-x86_64-${{ github.ref_name }}
           zip -r dragonfly-reverb-mac-universal-${{ github.ref_name }}.zip dragonfly-reverb-mac-universal-${{ github.ref_name }}
           zip -r dragonfly-reverb-win32-${{ github.ref_name }}.zip dragonfly-reverb-win32-${{ github.ref_name }}
