Add source CI step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,13 @@ jobs:
       - uses: distrho/dpf-makefile-action@v1
         with:
           target: pluginval
+
+  source:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - uses: distrho/dpf-makefile-action@v1
+        with:
+          target: source
