--- a/plugins/dragonfly-early-reflections/Makefile
+++ b/plugins/dragonfly-early-reflections/Makefile
@@ -79,7 +79,7 @@ LINK_OPTS += -lm
 # --------------------------------------------------------------
 # Enable all possible plugin types
 
-TARGETS = jack lv2_sep vst2 vst3 clap
+TARGETS = jack lv2_sep vst2 vst3 clap au
 
 all: $(TARGETS)
 
